k8s/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-demo-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-demo
      version: blue
  template:
    metadata:
      labels:
        app: spring-boot-demo
        version: blue
    spec:
    # ... rest same as before
