k8s/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-demo-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-demo
      version: green
  # ... rest same as before
