k8s/e-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-monolith
  namespace: production
  labels:
    app: ecommerce-monolith
spec:
  type: LoadBalancer
  selector:
    app: ecommerce-monolith
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
