k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-demo-k8s-service
spec:
  selector:
    app: spring-boot-demo-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort #LoadBalancer  # Or NodePort for Minikube
